# neo-ideas

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml  static.yml
assets/: index-1laEqBap.js  index-BMCZV0ml.js  index-D-A0JFAI.css  index-DMwahCKL.js  index-DaSuzqzm.js
notes/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+56 more)
posts/1716187144792-chopin/revisions/: 1716187144792.json
public/categories/: default.json
public/posts/1716187144-chopin/: detail.json
public/posts/1716187144792-chopin/: current.json  detail.json
public/posts/1716187144792-chopin/revisions/: 1716187144792.json
src/: App.vue  card_owned.html  footer.txt  main.rs  page.html  style.css
src/assets/: base.css  main.css
src/components/: PostDetail.vue
